--- a/test-app/src/app/pages/first-page/marital-status/marital-status.component.html
+++ b/test-app/src/app/pages/first-page/marital-status/marital-status.component.html
@@ -1,9 +1,11 @@
 <mat-form-field>
   <mat-label>Семейное положение</mat-label>
-  <mat-select [formControl]="status"
-    (selectionChange)="selectStatus(status)">
+  <mat-select [formControl]="status">
     <mat-option *ngFor="let st of getStatuses()" [value]="st.value">
       {{st.viewValue}}
     </mat-option>
   </mat-select>
 </mat-form-field>
+<mat-error *ngIf="status.touched && status.errors">
+  <strong>Данное поле обязательно к заполнению</strong>
+</mat-error>
